src-ken&y/objects/ASN_Line__c.object
<CustomObject>
    <customHelpPage>HelpASN</customHelpPage>
    <fields>
        <fullName>ASN__c</fullName>
        <label>ASN</label>
        <referenceTo>ASN__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>ASN__r.Currency__r.ISO_Code__c</formula>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Purchase_Order_Line__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extended_Cost__c</fullName>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <formula>ASN__r.Historical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Transit_Quantity__c</fullName>
        <formula>IF( Quantity_Declared__c &gt;0 , Quantity_Declared__c - Quantity_Received__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Transit Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to track if the ASN Line was changed after the ASN Header was confirmed</description>
        <label>Is changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Consigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <label>Line</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Boxes__c</fullName>
        <label>Number of Boxes</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line</label>
        <referenceTo>Order_Line__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Purchase_Order_Line__c.Purchase_Order__c</field>
                <operation>equals</operation>
                <valueField>$Source.Purchase_Order__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Purchase_Order__c.Supplier__c</field>
                <operation>equals</operation>
                <valueField>$Source.Supplier__c</valueField>
            </filterItems>
            <filterItems>
                <field>Purchase_Order__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <formula>Purchase_Order_Line__r.Unit_Price__c * Quantity_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Putaway_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Putaway Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>ASN Lines (Putaway Location)</relationshipLabel>
        <relationshipName>ASN_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Actually_Returned__c</fullName>
        <label>Quantity Actually Returned</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Consumed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Consumed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Declared__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Declared</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Received</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Shipped__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Shipped</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_To_Stock__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity To Stock</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_to_Consume__c</fullName>
        <formula>Quantity_Received__c - Quantity_Consumed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity to Consume</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Line</label>
        <referenceTo>Shipment_Line__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Cost__c</fullName>
        <label>Standard Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtransaction_Type__c</fullName>
        <label>Subtransaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Auto_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Auto Invoice</label>
        <referenceTo>Supplier_Invoice__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Supplier__c.Type__c</field>
                <operation>equals</operation>
                <value>Purchasing</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <formula>text(ASN__r.Transaction_Currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>ASN Line</label>
    <nameField>
        <label>ASN Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASN Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>